Update no-USB docs