@@ -9,7 +9,6 @@ import frc.generated.BuildConstants;
 import frc.robot.constants.Constants;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.littletonrobotics.junction.Logger;
 
 /** Utilities used by the AdvantageKit Logger. */
@@ -47,7 +46,7 @@ public class LoggerUtil {
   public static String getUSBPath() {
     // Return the path of the USB drive it is plugged in, else, return null.
     try {
-      Path drivePath = Paths.get("/u").toRealPath();
+      Path drivePath = Path.of("/u").toRealPath();
       return drivePath.toString();
     } catch (IOException e) {
       return null;
